# general-service/api/qubic/aggregation/general/v1/service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
+// - protoc-gen-go-grpc v1.6.2
 // - protoc             (unknown)
 // source: qubic/aggregation/general/v1/service.proto
 
@@ -19,8 +19,9 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	AggregationGeneralService_GetCurrentIpoBids_FullMethodName     = "/qubic.aggregation.general.v1.AggregationGeneralService/GetCurrentIpoBids"
-	AggregationGeneralService_GetIdentitiesBalances_FullMethodName = "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesBalances"
+	AggregationGeneralService_GetCurrentIpoBids_FullMethodName       = "/qubic.aggregation.general.v1.AggregationGeneralService/GetCurrentIpoBids"
+	AggregationGeneralService_GetIdentitiesBalances_FullMethodName   = "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesBalances"
+	AggregationGeneralService_GetSmartContractRewards_FullMethodName = "/qubic.aggregation.general.v1.AggregationGeneralService/GetSmartContractRewards"
 )
 
 // AggregationGeneralServiceClient is the client API for AggregationGeneralService service.
@@ -29,6 +30,7 @@ const (
 type AggregationGeneralServiceClient interface {
 	GetCurrentIpoBids(ctx context.Context, in *GetCurrentIpoBidsRequest, opts ...grpc.CallOption) (*GetCurrentIpoBidsResponse, error)
 	GetIdentitiesBalances(ctx context.Context, in *GetIdentitiesBalancesRequest, opts ...grpc.CallOption) (*GetIdentitiesBalancesResponse, error)
+	GetSmartContractRewards(ctx context.Context, in *GetSmartContractRewardsRequest, opts ...grpc.CallOption) (*GetSmartContractRewardsResponse, error)
 }
 
 type aggregationGeneralServiceClient struct {
@@ -59,12 +61,23 @@ func (c *aggregationGeneralServiceClient) GetIdentitiesBalances(ctx context.Cont
 	return out, nil
 }
 
+func (c *aggregationGeneralServiceClient) GetSmartContractRewards(ctx context.Context, in *GetSmartContractRewardsRequest, opts ...grpc.CallOption) (*GetSmartContractRewardsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetSmartContractRewardsResponse)
+	err := c.cc.Invoke(ctx, AggregationGeneralService_GetSmartContractRewards_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AggregationGeneralServiceServer is the server API for AggregationGeneralService service.
 // All implementations must embed UnimplementedAggregationGeneralServiceServer
 // for forward compatibility.
 type AggregationGeneralServiceServer interface {
 	GetCurrentIpoBids(context.Context, *GetCurrentIpoBidsRequest) (*GetCurrentIpoBidsResponse, error)
 	GetIdentitiesBalances(context.Context, *GetIdentitiesBalancesRequest) (*GetIdentitiesBalancesResponse, error)
+	GetSmartContractRewards(context.Context, *GetSmartContractRewardsRequest) (*GetSmartContractRewardsResponse, error)
 	mustEmbedUnimplementedAggregationGeneralServiceServer()
 }
 
@@ -80,6 +93,9 @@ func (UnimplementedAggregationGeneralServiceServer) GetCurrentIpoBids(context.Co
 }
 func (UnimplementedAggregationGeneralServiceServer) GetIdentitiesBalances(context.Context, *GetIdentitiesBalancesRequest) (*GetIdentitiesBalancesResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method GetIdentitiesBalances not implemented")
+}
+func (UnimplementedAggregationGeneralServiceServer) GetSmartContractRewards(context.Context, *GetSmartContractRewardsRequest) (*GetSmartContractRewardsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetSmartContractRewards not implemented")
 }
 func (UnimplementedAggregationGeneralServiceServer) mustEmbedUnimplementedAggregationGeneralServiceServer() {
 }
@@ -139,6 +155,24 @@ func _AggregationGeneralService_GetIdentitiesBalances_Handler(srv interface{}, c
 	return interceptor(ctx, in, info, handler)
 }
 
+func _AggregationGeneralService_GetSmartContractRewards_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSmartContractRewardsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AggregationGeneralServiceServer).GetSmartContractRewards(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AggregationGeneralService_GetSmartContractRewards_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AggregationGeneralServiceServer).GetSmartContractRewards(ctx, req.(*GetSmartContractRewardsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // AggregationGeneralService_ServiceDesc is the grpc.ServiceDesc for AggregationGeneralService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -153,6 +187,10 @@ var AggregationGeneralService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetIdentitiesBalances",
 			Handler:    _AggregationGeneralService_GetIdentitiesBalances_Handler,
+		},
+		{
+			MethodName: "GetSmartContractRewards",
+			Handler:    _AggregationGeneralService_GetSmartContractRewards_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
